--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "cbellera"
+title                    : "Carolina Bellera"
 title_separator          : "-"
 name                     : &name "Carolina Bellera"
 description              : &description "personal description"
