--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,8 @@ author:
   avatar           : "profile.png"
   bio              : "👋 I am Associate Researcher in LIDeB 🇦🇷👩‍ 💻💊🐍🎈"
   location         : "La Plata, Argentina"
-  employer         : "https://lideb.biol.unlp.edu.ar"
-  pubmed           : "hhttps://pubmed.ncbi.nlm.nih.gov/?term=Carolina+Bellera"
+  employer         : 
+  pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=Carolina+Bellera"
   googlescholar    : "https://scholar.google.com/citations?user=igqB7Y4AAAAJ&hl=es"
   email            :
   researchgate     : "https://www.researchgate.net/profile/cbellera"
