--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Carolina Bellera"
   avatar           : "profile.png"
-  bio              : "👋 I am Associate Researcher in LIDeB 🇦🇷👩‍ 💻💊🐍🎈"
+  bio              : "👋 I am Associate Researcher at LIDeB 🇦🇷👩‍ 💻💊🐍🎈"
   location         : "La Plata, Argentina"
   employer         : 
   pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=Carolina+Bellera"
